@@ -22,8 +22,8 @@ package org.drools.examples.decisiontable;
 public class Driver {
 
     private String name = "Mr Joe Blogs";
-    private Integer age = new Integer(30);
-    private Integer priorClaims = new Integer(0);
+    private Integer age = Integer.valueOf(30);
+    private Integer priorClaims = Integer.valueOf(0);
     private String  locationRiskProfile = "LOW";
 
     public Integer getAge() {
